# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//build/test.gni")

group("moduletest") {
  if (!defined(ohos_lite)) {
    testonly = true
    deps = [ "moduletest:moduletest" ]
  }
}

group("unittest") {
  if (!defined(ohos_lite)) {
    testonly = true
    deps = [
      "unittest/app_spawn_client_test:AppSpawn_client_ut",
      "unittest/app_spawn_standard_test:AppSpawn_ut",
    ]
    deps += [ "unittest/hnp_test:HnpTest" ]
  } else {
    testonly = true
    deps = [ "unittest/app_spawn_lite_test:unittest" ]
  }
}

group("fuzztest") {
  if (!defined(ohos_lite)) {
    testonly = true
    deps = [ "fuzztest:app_spawn_fuzztest" ]
  }
}
