# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn_standard/appspawn.gni")
import("//build/ohos.gni")

config("exported_header_files") {
  visibility = [ ":*" ]
  include_dirs = [ "include/" ]
}

ohos_static_library("appspawn_socket_client") {
  sources = [
    "${appspawn_path}/src/socket/appspawn_socket.cpp",
    "${appspawn_path}/src/socket/client_socket.cpp",
  ]
  include_dirs = [ "${appspawn_path}/include" ]
  public_configs = [ ":exported_header_files" ]
  deps = [ "//utils/native/base:utils" ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  subsystem_name = "${subsystem_name}"
  part_name = "${part_name}"
}
