# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//build/ohos.gni")

config("exported_header_files") {
  visibility = [ ":*" ]
  include_dirs = [ "include/" ]
}

ohos_static_library("appspawn_socket_client") {
  if (!defined(ohos_lite)) {
    sources = [
      "client/appspawn_socket.cpp",
      "client/client_socket.cpp",
      "src/appspawn_mount_permission.cpp",
    ]
    include_dirs = [
      "//base/startup/appspawn",
      "//base/startup/appspawn/util/include",
      "include",
      "//base/startup/appspawn/common",
      "//third_party/json/include",
    ]
    defines = []
    if (is_asan) {
      defines += [ "APPSPAWN_ASAN" ]
    }
    public_configs = [ ":exported_header_files" ]
    deps = []
    external_deps = [
      "c_utils:utils",
      "config_policy:configpolicy_util",
      "hilog:libhilog",
      "init:libbegetutil",
    ]
  }

  subsystem_name = "${subsystem_name}"
  part_name = "${part_name}"
}
