# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//build/ohos.gni")

ohos_shared_library("appspawn_ace") {
  sources = [
    "ace_adapter.cpp",
    "command_lexer.cpp",
  ]
  include_dirs = [
    ".",
    "${appspawn_path}/common",
    "${appspawn_path}/standard",
    "${appspawn_path}/util/include",
  ]
  deps = [
    "${appspawn_path}/modules/module_engine:libappspawn_module_engine",
    "${appspawn_path}/util:libappspawn_util",
  ]
  defines = []
  if (asan_detector || is_asan) {
    defines += [ "ASAN_DETECTOR" ]
  }
  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "ability_runtime:appkit_native",
    "ability_runtime:runtime",
    "access_token:libtoken_setproc",
    "ace_engine:ace_forward_compatibility",
    "cJSON:cjson",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "napi:ace_napi",
    "os_account:os_account_innerkits",
    "resource_management:global_resmgr",
    "selinux:libselinux",
  ]
  subsystem_name = "${subsystem_name}"
  part_name = "${part_name}"
  install_enable = true
  if (target_cpu == "arm64" || target_cpu == "x86_64" ||
      target_cpu == "riscv64") {
    module_install_dir = "lib64/appspawn/appspawn"
  } else {
    module_install_dir = "lib/appspawn/appspawn"
  }
}
