# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//build/ohos.gni")

ohos_shared_library("appspawn_asan") {
  sources = [ "asan_detector.c" ]
  include_dirs = [
    ".",
    "${appspawn_path}/common",
    "${appspawn_path}/standard",
  ]
  defines = []
  deps = [ "${appspawn_path}/modules/module_engine:libappspawn_module_engine" ]
  if (is_asan) {
    defines += [ "APPSPAWN_ASAN" ]
  }
  if (asan_detector || is_asan) {
    defines += [ "ASAN_DETECTOR" ]
  }
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
  install_enable = true
  subsystem_name = "${subsystem_name}"
  part_name = "${part_name}"
  if (target_cpu == "arm64" || target_cpu == "x86_64" ||
      target_cpu == "riscv64") {
    module_install_dir = "lib64/appspawn"
  } else {
    module_install_dir = "lib/appspawn"
  }
}
