# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

appspawn_sandbox_inc = [
    "//base/startup/appspawn/modules/sandbox"
]

appspawn_sandbox_src = [
    "//base/startup/appspawn/modules/sandbox/sandbox_dec.c",
    "//base/startup/appspawn/modules/sandbox/appspawn_permission.c",
]

if (defined(appspawn_sandbox_new) && appspawn_sandbox_new) {
    appspawn_sandbox_inc += [
        "//base/startup/appspawn/modules/sandbox/modern"
    ]

    appspawn_sandbox_src += [
        "//base/startup/appspawn/modules/sandbox/modern/appspawn_mount_template.c",
        "//base/startup/appspawn/modules/sandbox/modern/appspawn_sandbox.c",
        "//base/startup/appspawn/modules/sandbox/modern/sandbox_adapter.cpp",
        "//base/startup/appspawn/modules/sandbox/modern/sandbox_cfgvar.c",
        "//base/startup/appspawn/modules/sandbox/modern/sandbox_debug_mode.c",
        "//base/startup/appspawn/modules/sandbox/modern/sandbox_expand.c",
        "//base/startup/appspawn/modules/sandbox/modern/sandbox_load.c",
        "//base/startup/appspawn/modules/sandbox/modern/sandbox_manager.c",
        "//base/startup/appspawn/modules/sandbox/modern/sandbox_shared.c",
    ]
} else {
    appspawn_sandbox_inc += [
        "//base/startup/appspawn/modules/sandbox/normal"
    ]

    appspawn_sandbox_src += [
        "//base/startup/appspawn/modules/sandbox/normal/sandbox_shared_mount.cpp",
        "//base/startup/appspawn/modules/sandbox/normal/appspawn_sandbox_manager.cpp",
        "//base/startup/appspawn/modules/sandbox/normal/sandbox_common.cpp",
        "//base/startup/appspawn/modules/sandbox/normal/sandbox_core.cpp"
    ]
}