# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/startup/appspawn/appspawn.gni")
import("//build/ohos.gni")

ohos_shared_library("event_reporter") {
  sources = [ "event_reporter.cpp" ]
  include_dirs = [
    ".",
    "${appspawn_path}/common",
    "${appspawn_path}/standard",
  ]
  external_deps = [
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
  ]
  deps = [ "${appspawn_path}/modules/module_engine:libappspawn_module_engine" ]
  subsystem_name = "${subsystem_name}"
  part_name = "${part_name}"
  install_enable = true
  if (target_cpu == "arm64" || target_cpu == "x86_64" ||
      target_cpu == "riscv64") {
    module_install_dir = "lib64/appspawn/common"
  } else {
    module_install_dir = "lib/appspawn/common"
  }
}
